# repos

./: CMakeLists.txt  README
src/: CMakeLists.txt  main.cpp
tst/: CMakeLists.txt
tst/src/: CMakeLists.txt
tst/utils/: CMakeLists.txt  PropertyTest.cpp  PropertyTest.h
utils/: CMakeLists.txt  Property.cpp  Property.h
utils/tst/: CMakeLists.txt  PropertyTest.cpp
